Corrected the alignment issue in closed action plans, user permission added

--- a/meeting_action_plan/action_plan/static/css/style.css
+++ b/meeting_action_plan/action_plan/static/css/style.css
@@ -111,8 +111,6 @@ body {
 	color: #ff0000;
 
 }
-
-
 .signin_button input[type="submit"]{
 	
 	margin: auto;
@@ -122,7 +120,6 @@ body {
 	/*float: right;*/
 	width: 32%;
 }
-
 .add_department label{
 	width: 30% !important; 
 	margin: auto !important;
@@ -134,31 +131,23 @@ body {
 	margin-top: 50px;
 	padding: 10px;
 }
-
 .alert-info h4 {
   color: #3a87ae;
 }
-/*.content .login{
-	
-	width: 20%;
-	margin-top: 50px;
-	margin: auto;
-}
-*/
 .main_content{
 	background-color: #f3f3f3;
 	padding-top: 1px;
 	padding-bottom: 13px;
 }
- .add_department{
+.add_department{
  	width:35%;
 	margin: auto;
 	text-align: center;
 	background-color: #f3f3f3;
- }
- a:hover , a:focus {
+}
+a:hover , a:focus {
  	text-decoration: none !important;
- }
+}
 .content {
 	float: left;
 	width: 100%;
@@ -172,7 +161,6 @@ body {
 	margin-top: 30px;
 	padding: 10px;
 }
-
 .add_user {
 	width:30%;
 	margin: auto;
@@ -199,9 +187,7 @@ body {
 	float: left;
 	margin-bottom: 12px;
 	height: auto;
-
 }
-
 .user {
 	width:34%;
 	margin: auto;
@@ -217,7 +203,6 @@ body {
 	background-color: #f3f3f3;
 	padding-bottom: 16px;
 }
-
 .errorlist li{
 	color: red;
 	list-style: none;
